Add sales group and pivot
Signed-off-by: Jenn Allen <jenn.allen@gmail.com>

--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 247,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4           5184.00       Online  "
       ]
      },
-     "execution_count": 248,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 251,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 254,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -930,20 +930,20 @@
        "        Michigan Detroit                     50095"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Show the number products sold for region, state, and city.\n",
-    "region_group = cleaned_data.drop('invoice_date', axis=1).groupby(['region', 'state', 'city']).agg({'units_sold': 'sum'})\n",
+    "region_prod_group = cleaned_data.groupby(['region', 'state', 'city']).agg({'units_sold': 'sum'})\n",
     "\n",
     "# Rename the sum to \"Total_Products_Sold\".            \n",
-    "region_group.rename(columns={'units_sold': 'Total_Products_Sold'}, inplace=True)\n",
+    "region_prod_group.rename(columns={'units_sold': 'Total_Products_Sold'}, inplace=True)\n",
     "\n",
     "# Show the top 5 results.\n",
-    "region_group.head(5)\n"
+    "region_prod_group.head(5)\n"
    ]
   },
   {
@@ -955,17 +955,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/rr/f4rnf7xj5tj1x2gknbjs4mxm0000gn/T/ipykernel_46279/2949859847.py:3: FutureWarning: The provided callable <built-in function sum> is currently using DataFrameGroupBy.sum. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"sum\" instead.\n",
-      "  region_pivot = pd.pivot_table(cleaned_data,\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1039,7 +1031,7 @@
        "        Michigan Detroit                     50095"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,17 +1039,17 @@
    "source": [
     "# Show the number products sold for region, state, and city.\n",
     "\n",
-    "region_pivot = pd.pivot_table(cleaned_data,\n",
+    "region_prod_pivot = pd.pivot_table(cleaned_data,\n",
     "                              index=['region', 'state', 'city'],\n",
     "                              values='units_sold',\n",
-    "                              aggfunc=(sum)\n",
+    "                              aggfunc='sum'\n",
     "                              )\n",
     "\n",
     "# Rename the \"units_sold\" column to \"Total_Products_Sold\"\n",
-    "region_pivot.rename(columns={'units_sold': 'Total_Products_Sold'}, inplace=True)\n",
+    "region_prod_pivot.rename(columns={'units_sold': 'Total_Products_Sold'}, inplace=True)\n",
     "\n",
     "# Show the top 5 results.\n",
-    "region_pivot.head()\n"
+    "region_prod_pivot.head(5)\n"
    ]
   },
   {
@@ -1076,15 +1068,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 343,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Total_Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Midwest</th>\n",
+       "      <th>Illinois</th>\n",
+       "      <th>Chicago</th>\n",
+       "      <td>9797488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Indiana</th>\n",
+       "      <th>Indianapolis</th>\n",
+       "      <td>8836198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iowa</th>\n",
+       "      <th>Des Moines</th>\n",
+       "      <td>7424011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kansas</th>\n",
+       "      <th>Wichita</th>\n",
+       "      <td>9972864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Michigan</th>\n",
+       "      <th>Detroit</th>\n",
+       "      <td>18625433</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Total_Sales\n",
+       "region  state    city                     \n",
+       "Midwest Illinois Chicago           9797488\n",
+       "        Indiana  Indianapolis      8836198\n",
+       "        Iowa     Des Moines        7424011\n",
+       "        Kansas   Wichita           9972864\n",
+       "        Michigan Detroit          18625433"
+      ]
+     },
+     "execution_count": 343,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Show the total sales for the products sold for each region, state, and city.\n",
+    "region_sales_group = cleaned_data.groupby(['region', 'state', 'city']).agg({'total_sales': 'sum'})\n",
+    "\n",
     "# Rename the \"total_sales\" column to \"Total Sales\"\n",
+    "region_sales_group.rename(columns={'total_sales': 'Total_Sales'}, inplace=True)\n",
     "\n",
-    "\n",
-    "# Show the top 5 results.\n"
+    "# Show the top 5 results.\n",
+    "region_sales_group.head(5)\n"
    ]
   },
   {
@@ -1096,17 +1169,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 349,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Total_Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Midwest</th>\n",
+       "      <th>Illinois</th>\n",
+       "      <th>Chicago</th>\n",
+       "      <td>9797488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Indiana</th>\n",
+       "      <th>Indianapolis</th>\n",
+       "      <td>8836198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iowa</th>\n",
+       "      <th>Des Moines</th>\n",
+       "      <td>7424011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kansas</th>\n",
+       "      <th>Wichita</th>\n",
+       "      <td>9972864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Michigan</th>\n",
+       "      <th>Detroit</th>\n",
+       "      <td>18625433</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Total_Sales\n",
+       "region  state    city                     \n",
+       "Midwest Illinois Chicago           9797488\n",
+       "        Indiana  Indianapolis      8836198\n",
+       "        Iowa     Des Moines        7424011\n",
+       "        Kansas   Wichita           9972864\n",
+       "        Michigan Detroit          18625433"
+      ]
+     },
+     "execution_count": 349,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Show the total sales for the products sold for each region, state, and city.\n",
-    "\n",
+    "region_sales_pivot = pd.pivot_table(cleaned_data,\n",
+    "                                    index=['region', 'state', 'city'],\n",
+    "                                    values='total_sales',\n",
+    "                                    aggfunc='sum'\n",
+    "                                    )\n",
     "\n",
     "# Optional: Rename the \"total_sales\" column to \"Total Sales\"\n",
+    "region_sales_pivot.rename(columns={'total_sales': 'Total_Sales'}, inplace=True)\n",
     "\n",
-    "\n",
-    "# Show the top 5 results.\n"
+    "# Show the top 5 results.\n",
+    "region_sales_pivot.head(5)\n"
    ]
   },
   {
@@ -1125,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
