--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -1281,15 +1281,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 353,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Total_Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>retailer</th>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Amazon</th>\n",
+       "      <th>Midwest</th>\n",
+       "      <th>Ohio</th>\n",
+       "      <th>Columbus</th>\n",
+       "      <td>16835873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Northeast</th>\n",
+       "      <th>Maine</th>\n",
+       "      <th>Portland</th>\n",
+       "      <td>8611395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Massachusetts</th>\n",
+       "      <th>Boston</th>\n",
+       "      <td>4193590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New Hampshire</th>\n",
+       "      <th>Manchester</th>\n",
+       "      <td>10077142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vermont</th>\n",
+       "      <th>Burlington</th>\n",
+       "      <td>13380463</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Total_Sales\n",
+       "retailer region    state         city                   \n",
+       "Amazon   Midwest   Ohio          Columbus       16835873\n",
+       "         Northeast Maine         Portland        8611395\n",
+       "                   Massachusetts Boston          4193590\n",
+       "                   New Hampshire Manchester     10077142\n",
+       "                   Vermont       Burlington     13380463"
+      ]
+     },
+     "execution_count": 353,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Show the total sales for the products sold for each retailer, region, state, and city.\n",
+    "retail_group = cleaned_data.groupby(['retailer', 'region', 'state', 'city']).agg({'total_sales': 'sum'})\n",
+    "\n",
     "# Rename the \"total_sales\" column to \"Total Sales\"\n",
+    "retail_group.rename(columns={'total_sales':'Total_Sales'}, inplace=True)\n",
     "\n",
-    "\n",
-    "# Show the top 5 results.\n"
+    "# Show the top 5 results.\n",
+    "retail_group.head(5)\n"
    ]
   },
   {
@@ -1301,17 +1386,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 355,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Total_Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>retailer</th>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Amazon</th>\n",
+       "      <th>Midwest</th>\n",
+       "      <th>Ohio</th>\n",
+       "      <th>Columbus</th>\n",
+       "      <td>16835873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Northeast</th>\n",
+       "      <th>Maine</th>\n",
+       "      <th>Portland</th>\n",
+       "      <td>8611395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Massachusetts</th>\n",
+       "      <th>Boston</th>\n",
+       "      <td>4193590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New Hampshire</th>\n",
+       "      <th>Manchester</th>\n",
+       "      <td>10077142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vermont</th>\n",
+       "      <th>Burlington</th>\n",
+       "      <td>13380463</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Total_Sales\n",
+       "retailer region    state         city                   \n",
+       "Amazon   Midwest   Ohio          Columbus       16835873\n",
+       "         Northeast Maine         Portland        8611395\n",
+       "                   Massachusetts Boston          4193590\n",
+       "                   New Hampshire Manchester     10077142\n",
+       "                   Vermont       Burlington     13380463"
+      ]
+     },
+     "execution_count": 355,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Show the total sales for the products sold for each retailer, region, state, and city.\n",
-    "\n",
+    "retail_pivot = pd.pivot_table(cleaned_data,\n",
+    "                              index=['retailer', 'region', 'state', 'city'],\n",
+    "                              values='total_sales',\n",
+    "                              aggfunc='sum'\n",
+    "                              )\n",
     "\n",
     "# Optional: Rename the \"total_sales\" column to \"Total Sales\"\n",
+    "retail_pivot.rename(columns={'total_sales':'Total_Sales'}, inplace=True)\n",
     "\n",
-    "\n",
-    "# Show the top 5 results.\n"
+    "# Show the top 5 results.\n",
+    "retail_pivot.head(5)"
    ]
   },
   {
