Add pivot and group for womens footwear
Signed-off-by: Jenn Allen <jenn.allen@gmail.com>

--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -1495,11 +1495,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 360,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>retailer</th>\n",
+       "      <th>retailer_id</th>\n",
+       "      <th>invoice_date</th>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th>product</th>\n",
+       "      <th>price_per_unit</th>\n",
+       "      <th>units_sold</th>\n",
+       "      <th>total_sales</th>\n",
+       "      <th>operating_profit</th>\n",
+       "      <th>sales_method</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>2020-01-04</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Women's Athletic Footwear</td>\n",
+       "      <td>36</td>\n",
+       "      <td>281</td>\n",
+       "      <td>10116</td>\n",
+       "      <td>3742.92</td>\n",
+       "      <td>Outlet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>2020-01-04</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Women's Athletic Footwear</td>\n",
+       "      <td>41</td>\n",
+       "      <td>247</td>\n",
+       "      <td>10127</td>\n",
+       "      <td>4658.42</td>\n",
+       "      <td>Online</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>2020-01-04</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Women's Athletic Footwear</td>\n",
+       "      <td>45</td>\n",
+       "      <td>850</td>\n",
+       "      <td>382500</td>\n",
+       "      <td>133875.00</td>\n",
+       "      <td>In-store</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>West Gear</td>\n",
+       "      <td>1128299</td>\n",
+       "      <td>2020-01-05</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Women's Athletic Footwear</td>\n",
+       "      <td>45</td>\n",
+       "      <td>300</td>\n",
+       "      <td>135000</td>\n",
+       "      <td>47250.00</td>\n",
+       "      <td>Outlet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>West Gear</td>\n",
+       "      <td>1128299</td>\n",
+       "      <td>2020-01-05</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Women's Athletic Footwear</td>\n",
+       "      <td>34</td>\n",
+       "      <td>90</td>\n",
+       "      <td>3060</td>\n",
+       "      <td>1254.60</td>\n",
+       "      <td>Outlet</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       retailer  retailer_id invoice_date     region         state  \\\n",
+       "21  Foot Locker      1185732   2020-01-04  Northeast      New York   \n",
+       "22  Foot Locker      1185732   2020-01-04  Northeast      New York   \n",
+       "23  Foot Locker      1185732   2020-01-04  Northeast      New York   \n",
+       "26    West Gear      1128299   2020-01-05  Northeast  Pennsylvania   \n",
+       "27    West Gear      1128299   2020-01-05  Northeast  Pennsylvania   \n",
+       "\n",
+       "            city                    product  price_per_unit  units_sold  \\\n",
+       "21      New York  Women's Athletic Footwear              36         281   \n",
+       "22      New York  Women's Athletic Footwear              41         247   \n",
+       "23      New York  Women's Athletic Footwear              45         850   \n",
+       "26  Philadelphia  Women's Athletic Footwear              45         300   \n",
+       "27  Philadelphia  Women's Athletic Footwear              34          90   \n",
+       "\n",
+       "    total_sales  operating_profit sales_method  \n",
+       "21        10116           3742.92       Outlet  \n",
+       "22        10127           4658.42       Online  \n",
+       "23       382500         133875.00     In-store  \n",
+       "26       135000          47250.00       Outlet  \n",
+       "27         3060           1254.60       Outlet  "
+      ]
+     },
+     "execution_count": 360,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Filter the sales data to get the women's athletic footwear sales data.\n"
+    "# Filter the sales data to get the women's athletic footwear sales data.\n",
+    "women_footwear = pd.DataFrame(cleaned_data.loc[cleaned_data[\"product\"]== \"Women's Athletic Footwear\",:])\n",
+    "\n",
+    "# census_2019_df = pd.DataFrame(census_df.loc[census_df[\"Year\"]==2019,:])\n",
+    "women_footwear.head()\n",
+    "\n"
    ]
   },
   {
@@ -1511,15 +1659,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 365,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Womens_Footwear_Units_Sold</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Midwest</th>\n",
+       "      <th>Illinois</th>\n",
+       "      <th>Chicago</th>\n",
+       "      <td>2741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Indiana</th>\n",
+       "      <th>Indianapolis</th>\n",
+       "      <td>2732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iowa</th>\n",
+       "      <th>Des Moines</th>\n",
+       "      <td>2219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kansas</th>\n",
+       "      <th>Wichita</th>\n",
+       "      <td>3277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Michigan</th>\n",
+       "      <th>Detroit</th>\n",
+       "      <td>6756</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Womens_Footwear_Units_Sold\n",
+       "region  state    city                                    \n",
+       "Midwest Illinois Chicago                             2741\n",
+       "        Indiana  Indianapolis                        2732\n",
+       "        Iowa     Des Moines                          2219\n",
+       "        Kansas   Wichita                             3277\n",
+       "        Michigan Detroit                             6756"
+      ]
+     },
+     "execution_count": 365,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Show the total number of women's athletic footwear sold for each retailer, region, state, and city.\n",
+    "group_wm_footwear = women_footwear.groupby(['region', 'state', 'city']).agg({'units_sold': 'sum'})\n",
+    "\n",
     "# Rename the \"units_sold\" column to \"Womens_Footwear_Units_Sold\"\n",
+    "group_wm_footwear.rename(columns={'units_sold': 'Womens_Footwear_Units_Sold'}, inplace=True)\n",
     "\n",
-    "\n",
-    "# Show the top 5 results.\n"
+    "# Show the top 5 results.\n",
+    "group_wm_footwear.head(5)\n"
    ]
   },
   {
@@ -1531,17 +1760,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 369,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Womens_Footwear_Units_Sold</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Midwest</th>\n",
+       "      <th>Illinois</th>\n",
+       "      <th>Chicago</th>\n",
+       "      <td>2741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Indiana</th>\n",
+       "      <th>Indianapolis</th>\n",
+       "      <td>2732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iowa</th>\n",
+       "      <th>Des Moines</th>\n",
+       "      <td>2219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kansas</th>\n",
+       "      <th>Wichita</th>\n",
+       "      <td>3277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Michigan</th>\n",
+       "      <th>Detroit</th>\n",
+       "      <td>6756</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Womens_Footwear_Units_Sold\n",
+       "region  state    city                                    \n",
+       "Midwest Illinois Chicago                             2741\n",
+       "        Indiana  Indianapolis                        2732\n",
+       "        Iowa     Des Moines                          2219\n",
+       "        Kansas   Wichita                             3277\n",
+       "        Michigan Detroit                             6756"
+      ]
+     },
+     "execution_count": 369,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Show the total number of women's athletic footwear sold for each retailer, region, state, and city.\n",
-    "\n",
+    "pivot_wm_footwear = pd.pivot_table(women_footwear, \n",
+    "                                   index=['region', 'state', 'city'],\n",
+    "                                   values='units_sold',\n",
+    "                                   aggfunc='sum'\n",
+    "                                   )\n",
     "\n",
     "# Rename the \"units_sold\" column to \"Womens_Footwear_Units_Sold\"\n",
+    "pivot_wm_footwear.rename(columns={'units_sold':'Womens_Footwear_Units_Sold'}, inplace=True)\n",
     "\n",
-    "\n",
-    "# Show the top 5 results.\n"
+    "# Show the top 5 results.\n",
+    "pivot_wm_footwear.head(5)\n"
    ]
   },
   {
