--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 322,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4           5184.00       Online  "
       ]
      },
-     "execution_count": 323,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 326,
+     "execution_count": 376,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 329,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
        "        Michigan Detroit                     50095"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 381,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
        "        Michigan Detroit                     50095"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
        "        Michigan Detroit          18625433"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
        "        Michigan Detroit          18625433"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1361,7 @@
        "                   Vermont       Burlington     13380463"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
        "                   Vermont       Burlington     13380463"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1636,7 @@
        "27         3060           1254.60       Outlet  "
       ]
      },
-     "execution_count": 360,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1735,7 @@
        "        Michigan Detroit                             6756"
       ]
      },
-     "execution_count": 365,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
        "        Michigan Detroit                             6756"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1865,29 +1865,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 394,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>invoice_date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-04</th>\n",
+       "      <td>402743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-05</th>\n",
+       "      <td>141801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-11</th>\n",
+       "      <td>129556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-17</th>\n",
+       "      <td>173013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-22</th>\n",
+       "      <td>388250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-22</th>\n",
+       "      <td>200406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-23</th>\n",
+       "      <td>808022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-24</th>\n",
+       "      <td>190885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-25</th>\n",
+       "      <td>315175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-30</th>\n",
+       "      <td>167903</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>355 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Total Sales\n",
+       "invoice_date             \n",
+       "2020-01-04         402743\n",
+       "2020-01-05         141801\n",
+       "2020-01-11         129556\n",
+       "2020-01-17         173013\n",
+       "2020-01-22         388250\n",
+       "...                   ...\n",
+       "2021-12-22         200406\n",
+       "2021-12-23         808022\n",
+       "2021-12-24         190885\n",
+       "2021-12-25         315175\n",
+       "2021-12-30         167903\n",
+       "\n",
+       "[355 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 394,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a pivot table with the 'invoice_date' column is the index, and the \"total_sales\" as the values.\n",
-    "\n",
+    "days_most_sales = pd.pivot_table(women_footwear,\n",
+    "                            index='invoice_date', \n",
+    "                            values='total_sales',\n",
+    "                            aggfunc='sum'\n",
+    "                            )\n",
     "\n",
     "# Optional: Rename the \"total_sales\" column to \"Total Sales\"\n",
+    "days_most_sales.rename(columns={'total_sales':'Total Sales'}, inplace=True)\n",
     "\n",
-    "\n",
-    "# Show the table.\n"
+    "# Show the table.\n",
+    "days_most_sales\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 401,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>invoice_date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-07-16</th>\n",
+       "      <td>1521825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-16</th>\n",
+       "      <td>1473497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-17</th>\n",
+       "      <td>1376988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-17</th>\n",
+       "      <td>1086294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-23</th>\n",
+       "      <td>1021806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-27</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-25</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-30</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-31</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-01</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>727 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Total Sales\n",
+       "invoice_date             \n",
+       "2021-07-16        1521825\n",
+       "2021-12-16        1473497\n",
+       "2021-06-17        1376988\n",
+       "2021-08-17        1086294\n",
+       "2021-07-23        1021806\n",
+       "...                   ...\n",
+       "2021-02-27              0\n",
+       "2021-02-25              0\n",
+       "2020-07-30              0\n",
+       "2020-07-31              0\n",
+       "2021-01-01              0\n",
+       "\n",
+       "[727 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 401,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the pivot table into daily bins, and get the total sales for each day.\n",
+    "daily_sales = days_most_sales.resample('D').sum()\n",
     "\n",
+    "# Sort the resampled pivot table in descending order on \"Total Sales\".\n",
+    "daily_sales = daily_sales.sort_values(by='Total Sales', ascending=False)\n",
     "\n",
-    "# Sort the resampled pivot table in descending order on \"Total Sales\".\n"
+    "daily_sales"
    ]
   },
   {
@@ -1899,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
