--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 372,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4           5184.00       Online  "
       ]
      },
-     "execution_count": 373,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 376,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -636,14 +636,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/rr/f4rnf7xj5tj1x2gknbjs4mxm0000gn/T/ipykernel_46279/3825834240.py:5: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/rr/f4rnf7xj5tj1x2gknbjs4mxm0000gn/T/ipykernel_26329/3825834240.py:5: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  cleaned_data['invoice_date']= pd.to_datetime(cleaned_data['invoice_date'], errors='coerce')\n"
      ]
     },
@@ -785,7 +785,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 379,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
        "        Michigan Detroit                     50095"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
        "        Michigan Detroit                     50095"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
        "        Michigan Detroit          18625433"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
        "        Michigan Detroit          18625433"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1361,7 @@
        "                   Vermont       Burlington     13380463"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
        "                   Vermont       Burlington     13380463"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1636,7 @@
        "27         3060           1254.60       Outlet  "
       ]
      },
-     "execution_count": 387,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1735,7 @@
        "        Michigan Detroit                             6756"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
        "        Michigan Detroit                             6756"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1865,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
        "[355 rows x 1 columns]"
       ]
      },
-     "execution_count": 394,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2085,7 +2085,7 @@
        "[727 rows x 1 columns]"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2109,14 +2109,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>invoice_date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-12-19</th>\n",
+       "      <td>3098970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-12</th>\n",
+       "      <td>2922161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-11</th>\n",
+       "      <td>2835078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-18</th>\n",
+       "      <td>2801449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11-14</th>\n",
+       "      <td>2531721</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-06</th>\n",
+       "      <td>62801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-20</th>\n",
+       "      <td>61710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-13</th>\n",
+       "      <td>58916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-11-22</th>\n",
+       "      <td>53940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-18</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>105 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Total Sales\n",
+       "invoice_date             \n",
+       "2021-12-19        3098970\n",
+       "2021-12-12        2922161\n",
+       "2021-07-11        2835078\n",
+       "2021-07-18        2801449\n",
+       "2021-11-14        2531721\n",
+       "...                   ...\n",
+       "2020-12-06          62801\n",
+       "2020-12-20          61710\n",
+       "2020-12-13          58916\n",
+       "2020-11-22          53940\n",
+       "2020-10-18              0\n",
+       "\n",
+       "[105 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the pivot table into weekly bins, and get the total sales for each week.\n",
+    "weekly_sales = days_most_sales.resample('W').sum()\n",
     "\n",
+    "# Sort the resampled pivot table in descending order on \"Total Sales\".\n",
+    "weekly_sales = weekly_sales.sort_values(by='Total Sales', ascending=False)\n",
     "\n",
-    "# Sort the resampled pivot table in descending order on \"Total Sales\".\n"
+    "weekly_sales"
    ]
   },
   {
