--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -1644,10 +1644,7 @@
    "source": [
     "# Filter the sales data to get the women's athletic footwear sales data.\n",
     "women_footwear = pd.DataFrame(cleaned_data.loc[cleaned_data[\"product\"]== \"Women's Athletic Footwear\",:])\n",
-    "\n",
-    "# census_2019_df = pd.DataFrame(census_df.loc[census_df[\"Year\"]==2019,:])\n",
-    "women_footwear.head()\n",
-    "\n"
+    "women_footwear.head()"
    ]
   },
   {
